--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "epilepsy",
-  "homepage": "https://lin-jet.github.io/webdeploytest/",
+  "homepage": "https://github.com/Lin-Jet/testwebsite.git",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
